--- a/IsabelliDoces.csproj
+++ b/IsabelliDoces.csproj
@@ -20,4 +20,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.7.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.7.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Dtos\EmployeeDtos\" />
+    <Folder Include="Enums\" />
+  </ItemGroup>
 </Project>
