--- a/IsabelliDoces.csproj
+++ b/IsabelliDoces.csproj
@@ -23,6 +23,6 @@
 
   <ItemGroup>
     <Folder Include="Dtos\EmployeeDtos\" />
-    <Folder Include="Enums\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 </Project>
